// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: EditBounce default bounce toggle renders correctly if assigned to subaccount and feature flag is true 1`] = `
<Field
  component={[Function]}
  label={
    <Tooltip
      bottom={true}
      content="When this is set to \\"ON\\", all future transmissions for this subaccount will use xyz.com as their bounce domain (unless otherwise specified)."
      dark={true}
      forcePosition={false}
      horizontalOffset="0px"
      preferredDirection={
        Object {
          "bottom": true,
          "left": false,
          "right": true,
          "top": false,
        }
      }
      right={true}
    >
      Default bounce domain 
       for Subaccount 101
      <Help
        size={15}
      />
    </Tooltip>
  }
  name="is_default_bounce_domain"
  onChange={[Function]}
  parse={[Function]}
  type="checkbox"
/>
`;

exports[`Component: EditBounce default bounce toggle renders correctly toggle when all conditions are true 1`] = `
<Field
  component={[Function]}
  label={
    <Tooltip
      bottom={true}
      content="When this is set to \\"ON\\", all future transmissions will use xyz.com as their bounce domain (unless otherwise specified)."
      dark={true}
      forcePosition={false}
      horizontalOffset="0px"
      preferredDirection={
        Object {
          "bottom": true,
          "left": false,
          "right": true,
          "top": false,
        }
      }
      right={true}
    >
      Default bounce domain 
      <Help
        size={15}
      />
    </Tooltip>
  }
  name="is_default_bounce_domain"
  onChange={[Function]}
  parse={[Function]}
  type="checkbox"
/>
`;

exports[`Component: EditBounce default bounce toggle renders correctly toggle when all conditions are true except allowSubaccount 1`] = `
<Field
  component={[Function]}
  label={
    <Tooltip
      bottom={true}
      content="When this is set to \\"ON\\", all future transmissions will use xyz.com as their bounce domain (unless otherwise specified)."
      dark={true}
      forcePosition={false}
      horizontalOffset="0px"
      preferredDirection={
        Object {
          "bottom": true,
          "left": false,
          "right": true,
          "top": false,
        }
      }
      right={true}
    >
      Default bounce domain 
      <Help
        size={15}
      />
    </Tooltip>
  }
  name="is_default_bounce_domain"
  onChange={[Function]}
  parse={[Function]}
  type="checkbox"
/>
`;

exports[`Component: EditBounce does not show root domain warning for 3rd level domain 1`] = `
<SendingDomainSection
  title="Set Up For Bounce"
>
  <Left>
    <p>
      <strong>
        To use this domain for bounces
      </strong>
      , add this CNAME record to your DNS settings.
    </p>
    <p>
      <em>
        Note: Bounce domains must be verified via DNS.
      </em>
    </p>
  </Left>
  <Right>
    <Panel
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Verify CNAME Record",
            "disabled": false,
            "onClick": [Function],
          },
        ]
      }
      sectioned={true}
      title={
        <React.Fragment>
          <ErrorIcon />
           
          <span>
            DNS Settings
          </span>
        </React.Fragment>
      }
    >
      <LabelledValue
        label="Type"
      >
        <p>
          CNAME
        </p>
      </LabelledValue>
      <LabelledValue
        label="Hostname"
      >
        <p>
          c.b.a.com
        </p>
      </LabelledValue>
      <LabelledValue
        label="Value"
      >
        <p>
          sparkpostmail.com
        </p>
      </LabelledValue>
    </Panel>
  </Right>
</SendingDomainSection>
`;

exports[`Component: EditBounce renders not ready correctly 1`] = `
<SendingDomainSection
  title="Set Up For Bounce"
>
  <Left>
    <p>
      <strong>
        To use this domain for bounces
      </strong>
      , add this CNAME record to your DNS settings.
    </p>
    <p>
      <em>
        Note: Bounce domains must be verified via DNS.
      </em>
    </p>
  </Left>
  <Right>
    <Banner
      status="warning"
    >
      We strongly recommend using a subdomain such as 
      <strong>
        bounces.
        xyz.com
      </strong>
       for bounce domains. 
      <Link
        replace={false}
        to="/account/sending-domains/create"
      >
        Create a new domain now.
      </Link>
    </Banner>
    <Panel
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Verify CNAME Record",
            "disabled": false,
            "onClick": [Function],
          },
        ]
      }
      sectioned={true}
      title={
        <React.Fragment>
          <ErrorIcon />
           
          <span>
            DNS Settings
          </span>
        </React.Fragment>
      }
    >
      <LabelledValue
        label="Type"
      >
        <p>
          CNAME
        </p>
      </LabelledValue>
      <LabelledValue
        label="Hostname"
      >
        <p>
          xyz.com
        </p>
      </LabelledValue>
      <LabelledValue
        label="Value"
      >
        <p>
          sparkpostmail.com
        </p>
      </LabelledValue>
    </Panel>
  </Right>
</SendingDomainSection>
`;

exports[`Component: EditBounce renders ready correctly 1`] = `
<SendingDomainSection
  title="Set Up For Bounce"
>
  <Left />
  <Right>
    <Banner
      status="warning"
    >
      We strongly recommend using a subdomain such as 
      <strong>
        bounces.
        xyz.com
      </strong>
       for bounce domains. 
      <Link
        replace={false}
        to="/account/sending-domains/create"
      >
        Create a new domain now.
      </Link>
    </Banner>
    <Panel
      actions={
        Array [
          Object {
            "color": "orange",
            "content": "Re-verify CNAME Record",
            "disabled": false,
            "onClick": [Function],
          },
        ]
      }
      sectioned={true}
      title={
        <React.Fragment>
          <VerifiedIcon />
           
          <span>
            DNS Settings
          </span>
        </React.Fragment>
      }
    >
      <LabelledValue
        label="Type"
      >
        <p>
          CNAME
        </p>
      </LabelledValue>
      <LabelledValue
        label="Hostname"
      >
        <p>
          xyz.com
        </p>
      </LabelledValue>
      <LabelledValue
        label="Value"
      >
        <p>
          sparkpostmail.com
        </p>
      </LabelledValue>
    </Panel>
  </Right>
</SendingDomainSection>
`;

exports[`Component: EditBounce verifyDomain renders loading state correctly 1`] = `
Array [
  Object {
    "color": "orange",
    "content": "Verifying...",
    "disabled": true,
    "onClick": [Function],
  },
]
`;
